--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 Hello World
+
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+
+    <title>Weicheng Dai</title>
+    
+    <meta name="author" content="Weicheng Dai">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
