--- a/index.html
+++ b/index.html
@@ -8,3 +8,25 @@ Hello World
     <meta name="author" content="Weicheng Dai">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
+
+<body>
+    <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <tr style="padding:0px">
+            <td style="padding:0px">
+                <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+                    <tr style="padding:0px">
+                        <td style="padding:2.5%;width:63%;vertical-align:middle">
+                            <p style="text-align:center">
+                                <name>Weicheng Dai</name>
+                            </p>
+                            <p>I am a Master's student at NYU, majoring in computer science. 
+                            </p>
+                        </td>
+                    </tr>
+                </tbody></table>
+            </td>
+        </tr>
+    </tbody></table>
+</body>
+</html>
