--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@ Hello World
                             </p>
                             <p>I am a Master's student at NYU, majoring in computer science. 
                             </p>
+                            <p style="text-align:center">
+                                <a href="mailto:daiweicheng4536@gmail.com">Email</a> &nbsp/&nbsp
+                                <a href="https://www.linkedin.com/in/weicheng-dai-2926851bb/">LinkedIn</a> &nbsp/&nbsp
+                                <a href="https://github.com/WeichengDai1/">Github</a>
+                              </p>
                         </td>
                     </tr>
                 </tbody></table>
