--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-Hello World
-
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 
@@ -20,13 +18,13 @@ Hello World
                             <p style="text-align:center">
                                 <name>Weicheng Dai</name>
                             </p>
-                            <p>I am a Master's student at NYU, majoring in computer science. 
+                            <p>I am a Master's student at NYU, majoring in computer science. My research interests include Medical Image Analysis, Theoretical Machine Learning and Computer Graphics.
                             </p>
                             <p style="text-align:center">
                                 <a href="mailto:daiweicheng4536@gmail.com">Email</a> &nbsp/&nbsp
                                 <a href="https://www.linkedin.com/in/weicheng-dai-2926851bb/">LinkedIn</a> &nbsp/&nbsp
                                 <a href="https://github.com/WeichengDai1/">Github</a>
-                              </p>
+                            </p>
                         </td>
                     </tr>
                 </tbody></table>
