--- a/index.html
+++ b/index.html
@@ -26,10 +26,76 @@
                                 <a href="https://github.com/WeichengDai1/">Github</a>
                             </p>
                         </td>
+                        <td style="padding:2.5%;width:40%;max-width:40%">
+                            <a href="images/self.jpg">
+                                <img style="width:100%;max-width:100%" alt="profile photo" src="C:\Users\23809\Desktop\10212022highline.jpg" class="hoverZoomLink"></a>
+                        </td>
                     </tr>
                 </tbody></table>
+                <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+                    <tr>
+                    <td style="padding:20px;width:100%;vertical-align:middle">
+                    <heading>Research</heading>
+                    </td>
+                </tr>
+                </tbody></table>
+                <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+                <tr onmouseout="mira_stop()" onmouseover="mira_start()">
+                    <td style="padding:60px;width:25%;vertical-align:middle">
+                    <div class="one">
+                        <img src='images/action.jpg' width="260">
+                    </div>
+                    </td>
+                    <td style="padding:20px;width:75%;vertical-align:middle">
+                    <a href="https://arxiv.org/abs/2206.02307">
+                        <papertitle>Bootstrapping Semi-supervised Medical Image Segmentation with Anatomical-aware Contrastive Distillation</papertitle>
+                    </a>
+                    <br>
+                    <a href="http://chenyuyou.me/">Chenyu You</a>, <strong>Weicheng Dai</strong>, 
+                    <a href="https://medicine.yale.edu/profile/lawrence-staib/">Lawrence Staib</a>,
+                    <a href="https://seas.yale.edu/faculty-research/faculty-directory/james-duncan">James S. Duncan</a>,
+                    <br>
+                    <em>submitted to IPMI</em>, 2023
+                    <p></p>
+                    <p>
+                        In this work, we present ACTION, an Anatomical-aware ConTrastive dIstillatiON framework, for semi-supervised medical image segmentation.
+                    </p>
+                    </td>
+                </tr>	
+
+                <tr onmouseout="mira_stop()" onmouseover="mira_start()">
+                    <td style="padding:60px;width:25%;vertical-align:middle">
+                    <div class="one">
+                        <img src='images/mona.jpg' width="260">
+                    </div>
+                    </td>
+                    <td style="padding:20px;width:75%;vertical-align:middle">
+                    <a href="https://arxiv.org/abs/2209.13476">
+                        <papertitle>Mine yOur owN Anatomy: Revisiting Medical Image Segmentation with Extremely Limited Labels</papertitle>
+                    </a>
+                    <br>
+                    <a href="http://chenyuyou.me/">Chenyu You</a>, <strong>Weicheng Dai</strong>, 
+                    <a href="https://fenglinliu.com/">Fenglin Liu</a>,
+                    <a href="https://scholar.google.com/citations?user=0s5Xa8gAAAAJ&hl=en">Haoran Su</a>,
+                    <a href="https://xiaoranzhang.com/">Xiaoran Zhang</a>,
+                    <a href="https://xxlya.github.io/xiaoxiao/">Xiaoxiao Li</a>,
+                    <a href="https://ibme.ox.ac.uk/people/david-clifton/">David A. Clifton</a>,
+                    <a href="https://medicine.yale.edu/profile/lawrence-staib/">Lawrence Staib</a>,
+                    <a href="https://seas.yale.edu/faculty-research/faculty-directory/james-duncan">James S. Duncan</a>,
+                    <br>
+                    <em>submitted to CVPR</em>, 2023
+                    <p></p>
+                    <p>
+                        Three simple principles: (1) tailness: giving more importance to tail class hard pixels; (2) consistency: enforcing the feature invariances to specified data transformations; (3) diversity: ensuring anatomical diversity in the set of different sampled images in those imbalanced, unlabeled, and diverse scenarios.
+                    </p>
+                    </td>
+                </tr>	
             </td>
         </tr>
-    </tbody></table>
+
+
+    </tbody>
+    </table>
+
 </body>
 </html>
