--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         </td>
                         <td style="padding:2.5%;width:40%;max-width:40%">
                             <a href="images/self.jpg">
-                                <img style="width:100%;max-width:100%" alt="profile photo" src="C:\Users\23809\Desktop\10212022highline.jpg" class="hoverZoomLink"></a>
+                                <img style="width:100%;max-width:100%" alt="profile photo" src="images/self.jpg" class="hoverZoomLink"></a>
                         </td>
                     </tr>
                 </tbody></table>
