--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                             <p style="text-align:center">
                                 <name>Weicheng Dai</name>
                             </p>
-                            <p>I am a Master's student at NYU, majoring in computer science. My research interests include Medical Image Analysis, Theoretical Machine Learning and Computer Graphics.
+                            <p>I am a Master's student at NYU, majoring in computer science. My research interests include Computer & Medical Vision, Robotics, Theoretical Machine Learning and Computer Graphics.
                             </p>
                             <p style="text-align:center">
                                 <a href="mailto:daiweicheng4536@gmail.com">Email</a> &nbsp/&nbsp
