--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                     <em>submitted to IPMI</em>, 2023
                     <p></p>
                     <p>
-                        In this work, we present ACTION, an Anatomical-aware ConTrastive dIstillatiON framework, for semi-supervised medical image segmentation.
+                        In this work, we present ACTION, an Anatomical-aware ConTrastive dIstillatiON framework, for semi-supervised medical image segmentation. \
+                        This paper is accepted by Information Processing in Medical Imaging (IPMI 2023).
                     </p>
                     </td>
                 </tr>	
