--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
                     <a href="https://medicine.yale.edu/profile/lawrence-staib/">Lawrence Staib</a>,
                     <a href="https://seas.yale.edu/faculty-research/faculty-directory/james-duncan">James S. Duncan</a>,
                     <br>
-                    <em>submitted to IPMI</em>, 2023
+                    <em>Accepted by Information Processing in Medical Imaging (IPMI 2023)</em>
                     <p></p>
                     <p>
-                        In this work, we present ACTION, an Anatomical-aware ConTrastive dIstillatiON framework, for semi-supervised medical image segmentation. \
-                        This paper is accepted by Information Processing in Medical Imaging (IPMI 2023).
+                        In this work, we present ACTION, an Anatomical-aware ConTrastive dIstillatiON framework, for semi-supervised medical image segmentation. 
+                        
                     </p>
                     </td>
                 </tr>	
