--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 </tr>
                 </tbody></table>
                 <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+                
                 <tr onmouseout="mira_stop()" onmouseover="mira_start()">
                     <td style="padding:60px;width:25%;vertical-align:middle">
                     <div class="one">
@@ -91,6 +92,35 @@
                     </p>
                     </td>
                 </tr>	
+
+                <tr onmouseout="mira_stop()" onmouseover="mira_start()">
+                    <td style="padding:60px;width:25%;vertical-align:middle">
+                    <div class="one">
+                        <img src='images/stratified.jpg' width="260">
+                    </div>
+                    </td>
+                    <td style="padding:20px;width:75%;vertical-align:middle">
+                    <a href="https://arxiv.org/abs/2209.13476">
+                        <papertitle>Rethinking Semi-Supervised Medical Image Segmentation: A Variance-Reduction Perspective</papertitle>
+                    </a>
+                    <br>
+                    <a href="http://chenyuyou.me/">Chenyu You</a>, <strong>Weicheng Dai</strong>, 
+                    <a href="https://www.linkedin.com/in/yifei-min-21957254/">Yifei Min</a>
+                    <a href="https://fenglinliu.com/">Fenglin Liu</a>,
+                    <a href="https://xiaoranzhang.com/">Xiaoran Zhang</a>,
+                    <a href="https://simbaforrest.github.io/">Chen Feng</a>,
+                    <a href="https://ibme.ox.ac.uk/people/david-clifton/">David A. Clifton</a>,
+                    <a href="https://www.linkedin.com/in/s-kevin-zhou-231a094b/">S Kevin Zhou</a>,
+                    <a href="https://medicine.yale.edu/profile/lawrence-staib/">Lawrence Staib</a>,
+                    <a href="https://seas.yale.edu/faculty-research/faculty-directory/james-duncan">James S. Duncan</a>,
+                    <br>
+                    <em>submitted to CVPR</em>, 2023
+                    <p></p>
+                    <p>
+                        Two practical solutions via stratified group sampling theory that correct for the variance introduced by the common sampling practice, and achieve significant performance benefits. </p>
+                    </td>
+                </tr>
+
             </td>
         </tr>
 
