--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <tr onmouseout="mira_stop()" onmouseover="mira_start()">
                     <td style="padding:60px;width:25%;vertical-align:middle">
                     <div class="one">
-                        <img src='images/stratified.jpg' width="260">
+                        <img src='images/stratified.png' width="260">
                     </div>
                     </td>
                     <td style="padding:20px;width:75%;vertical-align:middle">
