--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     </div>
                     </td>
                     <td style="padding:20px;width:75%;vertical-align:middle">
-                    <a href="https://arxiv.org/abs/2209.13476">
+                    <a href="https://arxiv.org/abs/2302.01735">
                         <papertitle>Rethinking Semi-Supervised Medical Image Segmentation: A Variance-Reduction Perspective</papertitle>
                     </a>
                     <br>
@@ -115,6 +115,54 @@
                     <p></p>
                     <p>
                         Two practical solutions via stratified group sampling theory that correct for the variance introduced by the common sampling practice, and achieve significant performance benefits. </p>
+                    </td>
+                </tr>
+
+
+                <tr onmouseout="mira_stop()" onmouseover="mira_start()">
+                    <td style="padding:60px;width:25%;vertical-align:middle">
+                    <div class="one">
+                        <img src='images/action++.png' width="260">
+                    </div>
+                    </td>
+                    <td style="padding:20px;width:75%;vertical-align:middle">
+                    <a href="http://arxiv.org/abs/2304.02689">
+                        <papertitle>ACTION++: Improving Semi-supervised Medical Image Segmentation with Adaptive Anatomical Contrast</papertitle>
+                    </a>
+                    <br>
+                    <a href="http://chenyuyou.me/">Chenyu You</a>, <strong>Weicheng Dai</strong>, 
+                    <a href="https://www.linkedin.com/in/yifei-min-21957254/">Yifei Min</a>
+                    <a href="https://medicine.yale.edu/profile/lawrence-staib/">Lawrence Staib</a>,
+                    <a href="https://statistics.yale.edu/people/jas-sekhon">Jasjeet S. Sekhon</a>,
+                    <a href="https://seas.yale.edu/faculty-research/faculty-directory/james-duncan">James S. Duncan</a>,
+                    <br>
+                    <p></p>
+                    <p>
+                        In this work, we present ACTION++, an improved contrastive learning framework with adaptive anatomical contrast for semi-supervised medical segmentation. We propose an adaptive supervised
+                        contrastive loss, where we compute the optimal locations of class
+                        centers uniformly distributed on the embedding space. We also use dynamic Tau to yield better separation between majority and minority classe. </p>
+                    </td>
+                </tr>
+
+                <tr onmouseout="mira_stop()" onmouseover="mira_start()">
+                    <td style="padding:60px;width:25%;vertical-align:middle">
+                    <div class="one">
+                        <img src='images/implicit.png' width="260">
+                    </div>
+                    </td>
+                    <td style="padding:20px;width:75%;vertical-align:middle">
+                    <a href="http://arxiv.org/abs/2304.03209">
+                        <papertitle>Implicit Anatomical Rendering for Medical Image Segmentation with Stochastic Experts</papertitle>
+                    </a>
+                    <br>
+                    <a href="http://chenyuyou.me/">Chenyu You</a>, <strong>Weicheng Dai</strong>, 
+                    <a href="https://www.linkedin.com/in/yifei-min-21957254/">Yifei Min</a>
+                    <a href="https://medicine.yale.edu/profile/lawrence-staib/">Lawrence Staib</a>,
+                    <a href="https://seas.yale.edu/faculty-research/faculty-directory/james-duncan">James S. Duncan</a>,
+                    <br>
+                    <p></p>
+                    <p>
+                        In this work, we propose MORSE, a generic implicit neural rendering framework designed at an anatomical level to assist learning in medical image segmentation. The core of our approach is to formulate medical image segmentation as a rendering problem in an end-to-end manner. </p>
                     </td>
                 </tr>
 
