--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <papertitle>Mine yOur owN Anatomy: Revisiting Medical Image Segmentation with Extremely Limited Labels</papertitle>
                     </a>
                     <br>
-                    <a href="http://chenyuyou.me/">Chenyu You</a>, <strong>Weicheng Dai</strong>, 
+                    <a href="http://chenyuyou.me/">Chenyu You*</a>, <strong>Weicheng Dai*</strong>, 
                     <a href="https://fenglinliu.com/">Fenglin Liu</a>,
                     <a href="https://scholar.google.com/citations?user=0s5Xa8gAAAAJ&hl=en">Haoran Su</a>,
                     <a href="https://xiaoranzhang.com/">Xiaoran Zhang</a>,
@@ -87,7 +87,7 @@
                     <br>
                     <p></p>
                     <p>
-                        Three simple principles: (1) tailness: giving more importance to tail class hard pixels; (2) consistency: enforcing the feature invariances to specified data transformations; (3) diversity: ensuring anatomical diversity in the set of different sampled images in those imbalanced, unlabeled, and diverse scenarios.
+                        (* denotes equal contribution) Three simple principles: (1) tailness: giving more importance to tail class hard pixels; (2) consistency: enforcing the feature invariances to specified data transformations; (3) diversity: ensuring anatomical diversity in the set of different sampled images in those imbalanced, unlabeled, and diverse scenarios.
                     </p>
                     </td>
                 </tr>	
