--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                             <p style="text-align:center">
                                 <name>Weicheng Dai</name>
                             </p>
-                            <p>I am a Master's student at NYU, majoring in computer science. My research interests include computer & medical vision, robotics, theoretical machine learning and computer graphics.
+                            <p>I am a incoming researsh assistant at Yale, where I am very fortunately advised by Professor <a href="https://medicine.yale.edu/profile/julius-chapiro/">Julius</a>, Professor <a href="https://seas.yale.edu/faculty-research/faculty-directory/james-duncan">James S. Duncan</a> and Professor <a href="https://medicine.yale.edu/profile/mingde-lin/">Mingde Lin</a>. I am also working closely with <a href="http://chenyuyou.me/">Mr. Chenyu You</a>. I obtained a Master degree in Computer Science at New York University. My research interests include computer & medical vision, and theoretical machine learning.
                             </p>
                             <p style="text-align:center">
                                 <a href="mailto:daiweicheng4536@gmail.com">Email</a> &nbsp/&nbsp
