--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
                     <a href="https://statistics.yale.edu/people/jas-sekhon">Jasjeet S. Sekhon</a>,
                     <a href="https://seas.yale.edu/faculty-research/faculty-directory/james-duncan">James S. Duncan</a>,
                     <br>
+                    <em>Early accepted by Information Processing in Medical Imaging (IPMI 2023)</em>
                     <p></p>
                     <p>
                         In this work, we present ACTION++, an improved contrastive learning framework with adaptive anatomical contrast for semi-supervised medical segmentation. We propose an adaptive supervised
@@ -160,9 +161,11 @@
                     <a href="https://medicine.yale.edu/profile/lawrence-staib/">Lawrence Staib</a>,
                     <a href="https://seas.yale.edu/faculty-research/faculty-directory/james-duncan">James S. Duncan</a>,
                     <br>
+                    <em>Early accepted by Information Processing in Medical Imaging (IPMI 2023)</em>
                     <p></p>
                     <p>
-                        In this work, we propose MORSE, a generic implicit neural rendering framework designed at an anatomical level to assist learning in medical image segmentation. The core of our approach is to formulate medical image segmentation as a rendering problem in an end-to-end manner. </p>
+                        In this work, we propose MORSE, a generic implicit neural rendering framework designed at an anatomical level to assist learning in medical image segmentation. 
+                        The core of our approach is to formulate medical image segmentation as a rendering problem in an end-to-end manner. </p>
                     </td>
                 </tr>
 
