--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                             <p style="text-align:center">
                                 <name>Weicheng Dai</name>
                             </p>
-                            <p>I am an incoming researsh assistant at Yale University, where I am very fortunately advised by Professor <a href="https://medicine.yale.edu/profile/julius-chapiro/">Julius Chapiro</a>, Professor <a href="https://seas.yale.edu/faculty-research/faculty-directory/james-duncan">James S. Duncan</a> and Professor <a href="https://medicine.yale.edu/profile/mingde-lin/">Mingde Lin</a>. I am also working closely with <a href="http://chenyuyou.me/">Mr. Chenyu You</a>. I obtained a Master degree in Computer Science at New York University. My research interests include computer & medical vision, and theoretical machine learning.
+                            <p>I am currently a researsh associate at Yale University, where I am very fortunately advised by Professor <a href="https://medicine.yale.edu/profile/julius-chapiro/">Julius Chapiro</a>, Professor <a href="https://seas.yale.edu/faculty-research/faculty-directory/james-duncan">James S. Duncan</a> and Professor <a href="https://medicine.yale.edu/profile/mingde-lin/">Mingde Lin</a>. I am also working closely with <a href="http://chenyuyou.me/">Mr. Chenyu You</a>. I obtained a Master degree in Computer Science at New York University. My research interests include computer & medical vision, and theoretical machine learning.
                             </p>
                             <p style="text-align:center">
                                 <a href="mailto:daiweicheng4536@gmail.com">Email</a> &nbsp/&nbsp
@@ -53,6 +53,7 @@
                     </a>
                     <br>
                     <a href="http://chenyuyou.me/">Chenyu You</a>, <strong>Weicheng Dai</strong>, 
+                    <a href="https://www.linkedin.com/in/yifei-min-21957254/">Yifei Min</a>,
                     <a href="https://medicine.yale.edu/profile/lawrence-staib/">Lawrence Staib</a>,
                     <a href="https://seas.yale.edu/faculty-research/faculty-directory/james-duncan">James S. Duncan</a>,
                     <br>
@@ -77,14 +78,14 @@
                     </a>
                     <br>
                     <a href="http://chenyuyou.me/">Chenyu You*</a>, <strong>Weicheng Dai*</strong>, 
+                    <a href="https://www.linkedin.com/in/yifei-min-21957254/">Yifei Min</a>,
                     <a href="https://fenglinliu.com/">Fenglin Liu</a>,
-                    <a href="https://scholar.google.com/citations?user=0s5Xa8gAAAAJ&hl=en">Haoran Su</a>,
-                    <a href="https://xiaoranzhang.com/">Xiaoran Zhang</a>,
                     <a href="https://xxlya.github.io/xiaoxiao/">Xiaoxiao Li</a>,
                     <a href="https://ibme.ox.ac.uk/people/david-clifton/">David A. Clifton</a>,
                     <a href="https://medicine.yale.edu/profile/lawrence-staib/">Lawrence Staib</a>,
                     <a href="https://seas.yale.edu/faculty-research/faculty-directory/james-duncan">James S. Duncan</a>,
                     <br>
+                    <em>Under review by IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI 2023)</em>
                     <p></p>
                     <p>
                         (* denotes equal contribution) Three simple principles: (1) tailness: giving more importance to tail class hard pixels; (2) consistency: enforcing the feature invariances to specified data transformations; (3) diversity: ensuring anatomical diversity in the set of different sampled images in those imbalanced, unlabeled, and diverse scenarios.
@@ -112,6 +113,7 @@
                     <a href="https://medicine.yale.edu/profile/lawrence-staib/">Lawrence Staib</a>,
                     <a href="https://seas.yale.edu/faculty-research/faculty-directory/james-duncan">James S. Duncan</a>,
                     <br>
+                    <em>Accepted by Conference on Neural Information Processing Systems (NeurIPS 2023)</em>
                     <p></p>
                     <p>
                         Two practical solutions via stratified group sampling theory that correct for the variance introduced by the common sampling practice, and achieve significant performance benefits. </p>
