--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                             <p style="text-align:center">
                                 <name>Weicheng Dai</name>
                             </p>
-                            <p>I am currently a researsh associate at Yale University, where I am very fortunately advised by Professor <a href="https://medicine.yale.edu/profile/julius-chapiro/">Julius Chapiro</a>, Professor <a href="https://seas.yale.edu/faculty-research/faculty-directory/james-duncan">James S. Duncan</a> and Professor <a href="https://medicine.yale.edu/profile/mingde-lin/">Mingde Lin</a>. I am also working closely with <a href="http://chenyuyou.me/">Mr. Chenyu You</a>. I obtained a Master degree in Computer Science at New York University. My research interests include computer & medical vision, and theoretical machine learning.
+                            <p>I am currently a phd student at Boston University, where I am very fortunately advised by Professor <a href="https://batman-lab.com/">Kayhan Batmanghelich</a>. Previously I worked at Yale University for Professor <a href="https://medicine.yale.edu/profile/julius-chapiro/">Julius Chapiro</a> and Professor <a href="https://seas.yale.edu/faculty-research/faculty-directory/james-duncan">James S. Duncan</a>. I also worked with Professor <a href="http://chenyuyou.me/">Chenyu You</a>. I obtained a Master degree in Computer Science at New York University. My research interests include computer & medical vision, and explainable machine learning.
                             </p>
                             <p style="text-align:center">
                                 <a href="mailto:daiweicheng4536@gmail.com">Email</a> &nbsp/&nbsp
@@ -85,7 +85,7 @@
                     <a href="https://medicine.yale.edu/profile/lawrence-staib/">Lawrence Staib</a>,
                     <a href="https://seas.yale.edu/faculty-research/faculty-directory/james-duncan">James S. Duncan</a>,
                     <br>
-                    <em>Under review by IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI 2023)</em>
+                    <em>Accepted by IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI 2023)</em>
                     <p></p>
                     <p>
                         (* denotes equal contribution) Three simple principles: (1) tailness: giving more importance to tail class hard pixels; (2) consistency: enforcing the feature invariances to specified data transformations; (3) diversity: ensuring anatomical diversity in the set of different sampled images in those imbalanced, unlabeled, and diverse scenarios.
@@ -168,6 +168,32 @@
                     <p>
                         In this work, we propose MORSE, a generic implicit neural rendering framework designed at an anatomical level to assist learning in medical image segmentation. 
                         The core of our approach is to formulate medical image segmentation as a rendering problem in an end-to-end manner. </p>
+                    </td>
+                </tr>
+
+                <tr onmouseout="mira_stop()" onmouseover="mira_start()">
+                    <td style="padding:60px;width:25%;vertical-align:middle">
+                    <div class="one">
+                        <img src='images/CFR.png' width="260">
+                    </div>
+                    </td>
+                    <td style="padding:20px;width:75%;vertical-align:middle">
+                    <a href="https://arxiv.org/abs/2403.07241">
+                        <papertitle>Calibrating Multi-modal Representations: A Pursuit of Group Robustness without Annotations</papertitle>
+                    </a>
+                    <br>
+                    <a href="http://chenyuyou.me/">Chenyu You</a>,  
+                    <a href="https://www.linkedin.com/in/yifei-min-21957254/">Yifei Min</a>,
+                    <strong>Weicheng Dai</strong>,
+                    <a href="https://statistics.yale.edu/people/jas-sekhon">Jasjeet S. Sekhon</a>,
+                    <a href="https://medicine.yale.edu/profile/lawrence-staib/">Lawrence Staib</a>,
+                    <a href="https://seas.yale.edu/faculty-research/faculty-directory/james-duncan">James S. Duncan</a>,
+                    <br>
+                    <em>Accepted by The IEEE / CVF Computer Vision and Pattern Recognition Conference (CVPR 2024)</em>
+                    <p></p>
+                    <p>
+                        In this work, we propose CFR, which focuses on exploring mitigating the reliance on spurious features for CLIP without using any group annotation. 
+                        We showcase a lightweight representation calibration method for fine-tuning CLIP, by first generating a calibration set using the pretrained CLIP, and then calibrating representations of samples within this set through contrastive learning.</p>
                     </td>
                 </tr>
 
