--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                             <p style="text-align:center">
                                 <name>Weicheng Dai</name>
                             </p>
-                            <p>I am currently a phd student at Boston University, where I am very fortunately advised by Professor <a href="https://batman-lab.com/">Kayhan Batmanghelich</a>. Previously I worked at Yale University for Professor <a href="https://medicine.yale.edu/profile/julius-chapiro/">Julius Chapiro</a> and Professor <a href="https://seas.yale.edu/faculty-research/faculty-directory/james-duncan">James S. Duncan</a>. I also worked with Professor <a href="http://chenyuyou.me/">Chenyu You</a>. I obtained a Master degree in Computer Science at New York University. My research interests include computer & medical vision, and explainable machine learning.
+                            <p>I am currently a PhD student at Boston University, where I am very fortunately advised by Professor <a href="https://batman-lab.com/">Kayhan Batmanghelich</a>. Previously I worked at Yale University for Professor <a href="https://medicine.yale.edu/profile/julius-chapiro/">Julius Chapiro</a> and Professor <a href="https://seas.yale.edu/faculty-research/faculty-directory/james-duncan">James S. Duncan</a>. I was also working closely with Professor <a href="http://chenyuyou.me/">Chenyu You</a>. I obtained a Master degree in Computer Science at New York University. My research interests include computer & medical vision, and explainable machine learning.
                             </p>
                             <p style="text-align:center">
                                 <a href="mailto:daiweicheng4536@gmail.com">Email</a> &nbsp/&nbsp
